# prices-predictor-system

./: pyproject.toml
analysis/: EDA.ipynb
analysis/analyze_src/: basic_data_inspection.py  multivariate_analysis.py  univariate_analysis.py
pipelines/: training_pipeline.py
src/: data_splitter.py  feature_engineering.py  handle_missing_values.py  ingest_data.py  model_building.py  outlier_detection.py
steps/: data_ingestion_step.py  data_splitter_step.py  feature_engineering_step.py  handling_missing_values_step.py  model_building_step.py  outlier_detection_step.py
tests/: run_pipeline.py
