[tool.poetry]
name = "prices-predictor-system"
version = "0.1.0"
description = ""
authors = ["Durgesh Rathod"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.2"
black = "^24.8.0"
isort = "^5.13.2"
numpy = "^1.24.0"
click = ">=8.0.1,<8.1.4"
zenml = "^0.65.0"
scikit-learn = "^1.5.1"
mlflow = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
